Fix projects images on mobile size

--- a/style.css
+++ b/style.css
@@ -350,7 +350,7 @@ nav .hamburger-menu {
 
 .projects-image {
   /* max-width: 120px; */
-  height: 240px;
+  max-height: 240px;
   margin: 0 auto;
   border-radius: 0.5rem;
 }
@@ -443,7 +443,11 @@ footer p .fa-heart {
 @media (max-width: 1024px) {
   .projects-wrapper,
   .contact-wrapper {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: minmax(300px, 1fr);
+  }
+
+  .projects-image {
+    max-height: 180px;
   }
 }
 
